--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
 
 dependencies {
     def nav_version = "2.1.0"
+    implementation 'com.google.firebase:firebase-analytics:17.2.0'
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -38,3 +39,4 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.firebase:firebase-auth:19.0.0'
 }
+apply plugin: 'com.google.gms.google-services'
